--- a/css/styles.css
+++ b/css/styles.css
@@ -1,7 +1,8 @@
 body{
-    background: gray;
+    background: #111;
     overflow: hidden;
     margin-top: 0px;
+    color: #111;
 }
 .wrapper{
     width: 90%; 
@@ -13,26 +14,38 @@ body{
     grid-auto-rows: auto;
 }
 .wrapper > div{
-    background: salmon;
     border: 2px solid black;    
 }
 .header{
     grid-column: 2 / 4;
     grid-row: 1 / 2;
+    height: 120px;
+    background-color: #3dc1d3;
 }
 .sidebar{
     grid-column: 1 / 2;
     grid-row: 1 / 4;
+    background: #ffffff;
 }
 .main{
     grid-column: 2 / 3;
     grid-row: 2 / 3;
+    background: #ffffff;
+    display: flex;
+    flex-wrap: nowrap;
 }
+.main > div {
+    width: 50%;
+}
+
 .sidebar2{
     grid-column: 3 / 4;
     grid-row: 2 / 4;
+    background: #ffffff;
 }
 .footer{
     grid-column: 2 / 3;
     grid-row: 3 /4;
+    height: 100px;
+    background: #3dc1d3;
 }
