--- a/css/styles.css
+++ b/css/styles.css
@@ -12,9 +12,11 @@ body{
     display: grid;
     grid-template-columns: 15% 75% 10%;
     grid-auto-rows: auto;
+    border-radius: 15px;
 }
 .wrapper > div{
-    border: 2px solid black;    
+    border: 2px solid black;
+    border-radius: 15px;    
 }
 .header{
     grid-column: 2 / 4;
@@ -46,6 +48,6 @@ body{
 .footer{
     grid-column: 2 / 3;
     grid-row: 3 /4;
-    height: 100px;
+    height: 50px;
     background: #3dc1d3;
 }
