--- a/css/styles.css
+++ b/css/styles.css
@@ -1,34 +1,38 @@
 body{
-    background: #111;
-    overflow: hidden;
+    font-family: serif;
+    font-size: 20px;
+    line-height: 140%;
     margin-top: 0px;
     color: #111;
+    background: linear-gradient(135deg, #0F2027 0%, #203A43 50%, #2C5364 100%);
 }
 .wrapper{
-    width: 90%; 
+    width: 95%; 
     overflow: hidden;
     background: #ffffff;
     margin: 0 auto;
     display: grid;
     grid-template-columns: 15% 75% 10%;
     grid-auto-rows: auto;
-    border-radius: 15px;
+    box-shadow: 0px 0px 15px 5px #666;
 }
 .wrapper > div{
-    border: 2px solid black;
-    border-radius: 15px;    
+    border: 1px solid black;    
+    /* border-radius: 15px; */
+    margin: 15px;
+    box-shadow: 0px 0px 15px 2px rgba(0,0,0,0.7);
+    padding: 10px;
 }
 .header{
-    grid-column: 2 / 4;
+    grid-column: 1 / 4;
     grid-row: 1 / 2;
     height: 120px;
-    background-color: #3dc1d3;
+    background: #203A43;
 }
 .sidebar{
     grid-column: 1 / 2;
-    grid-row: 1 / 4;
-    background: #ffffff;
-}
+    grid-row: 2 / 4;;
+    background: #ffffff;}
 .main{
     grid-column: 2 / 3;
     grid-row: 2 / 3;
@@ -36,18 +40,27 @@ body{
     display: flex;
     flex-wrap: nowrap;
 }
-.main > div {
-    width: 50%;
+.main-left{
+    border-right: 1px solid #bbb;
+    padding: 20px;
+    width: 60%;
 }
-
+.main-right{
+    padding: 20px;
+    width: 40%;
+}
 .sidebar2{
     grid-column: 3 / 4;
     grid-row: 2 / 4;
-    background: #ffffff;
-}
+    background: #ffffff;}
 .footer{
     grid-column: 2 / 3;
     grid-row: 3 /4;
     height: 50px;
-    background: #3dc1d3;
+    background: #ffffff;
+}
+ul > li{
+    /* padding: 20px;
+    margin: 20px; */
+    font-size: 18px;
 }
