--- a/css/styles.css
+++ b/css/styles.css
@@ -1,4 +1,5 @@
 body{
+    min-width: 400px;
     font-family: serif;
     font-size: 20px;
     line-height: 140%;
@@ -18,7 +19,6 @@ body{
 }
 .wrapper > div{
     border: 1px solid black;    
-    /* border-radius: 15px; */
     margin: 15px;
     box-shadow: 0px 0px 15px 2px rgba(0,0,0,0.7);
     padding: 10px;
@@ -29,12 +29,27 @@ body{
     height: 120px;
     background: #203A43;
 }
+.header > h1{
+    padding: 15px;
+    padding-left: 50px;
+    color: #ffffff;
+}
 .sidebar{
     grid-column: 1 / 2;
     grid-row: 2 / 4;;
-    background: #ffffff;}
+    background: #ffffff;
+}
+.sidebar > ul{
+    padding: 25px;
+    margin: 0;
+}
+.sidebar li{
+    margin-bottom: 10px;
+    padding-bottom: 10px;
+    border-bottom: 1px solid #bbb;
+}
 .main{
-    grid-column: 2 / 3;
+    grid-column: 2 / 4;
     grid-row: 2 / 3;
     background: #ffffff;
     display: flex;
@@ -42,25 +57,64 @@ body{
 }
 .main-left{
     border-right: 1px solid #bbb;
-    padding: 20px;
+    padding: 30px;
     width: 60%;
+    display: grid;
 }
 .main-right{
     padding: 20px;
     width: 40%;
 }
-.sidebar2{
-    grid-column: 3 / 4;
-    grid-row: 2 / 4;
-    background: #ffffff;}
+.main-right > p{
+    margin-top: 0px;
+}
+
 .footer{
-    grid-column: 2 / 3;
-    grid-row: 3 /4;
+    grid-column: 2 / 4;
+    grid-row: 3 / 4;
     height: 50px;
     background: #ffffff;
 }
+.footer > p{
+    margin: 0 auto;
+    padding: 10px;
+}
 ul > li{
-    /* padding: 20px;
-    margin: 20px; */
     font-size: 18px;
+}
+@media only screen and (max-width: 1200px) {
+    .sidebar{
+        grid-column: 1 / 4;
+        grid-row: 2 / 3;
+    }
+    .sidebar > ul{
+        display: flex;
+        flex-wrap: wrap;
+        justify-content: space-evenly;
+        /* align-content: start; */
+    }
+    .sidebar li{
+        padding-right: 15px;
+        width: 30%;
+        border-bottom: none;
+    }
+    .main{
+        font-size: 16px;
+        grid-column: 1 / 4;
+        grid-row: 3 / 4;
+        flex-direction: column;
+    }
+    .main-left{
+        width: 90%;
+        border-right: none;
+        margin: auto;
+    }
+    .main-right{
+        width: 90%;
+        margin: auto;
+    }
+    .footer{
+        grid-column: 1 / 4;
+        grid-row: 4 / 5;
+    }
 }
